@@ -36,12 +36,14 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasToString;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.not;
+import static org.mockito.Mockito.mock;
 
 public class SearchSlowLogTests extends ESSingleNodeTestCase {
     static MockAppender appender;
@@ -89,58 +91,59 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
     }
 
     public void testLevelPrecedence() {
-        SearchContext ctx = searchContextWithSourceAndTask(createIndex("index"));
-        String uuid = UUIDs.randomBase64UUID();
-        IndexSettings settings = new IndexSettings(createIndexMetadata("index", settings(uuid)), Settings.EMPTY);
-        SearchSlowLog log = new SearchSlowLog(settings);
+        try (SearchContext ctx = searchContextWithSourceAndTask(createIndex("index"))) {
+            String uuid = UUIDs.randomBase64UUID();
+            IndexSettings settings = new IndexSettings(createIndexMetadata("index", settings(uuid)), Settings.EMPTY);
+            SearchSlowLog log = new SearchSlowLog(settings, mock(SlowLogFieldProvider.class));
 
-        // For this test, when level is not breached, the level below should be used.
-        {
-            log.onQueryPhase(ctx, 40L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
-            log.onQueryPhase(ctx, 41L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.WARN));
+            // For this test, when level is not breached, the level below should be used.
+            {
+                log.onQueryPhase(ctx, 40L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
+                log.onQueryPhase(ctx, 41L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.WARN));
 
-            log.onFetchPhase(ctx, 40L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
-            log.onFetchPhase(ctx, 41L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.WARN));
-        }
+                log.onFetchPhase(ctx, 40L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
+                log.onFetchPhase(ctx, 41L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.WARN));
+            }
 
-        {
-            log.onQueryPhase(ctx, 30L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
-            log.onQueryPhase(ctx, 31L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
+            {
+                log.onQueryPhase(ctx, 30L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
+                log.onQueryPhase(ctx, 31L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
 
-            log.onFetchPhase(ctx, 30L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
-            log.onFetchPhase(ctx, 31L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
-        }
+                log.onFetchPhase(ctx, 30L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
+                log.onFetchPhase(ctx, 31L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.INFO));
+            }
 
-        {
-            log.onQueryPhase(ctx, 20L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
-            log.onQueryPhase(ctx, 21L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
+            {
+                log.onQueryPhase(ctx, 20L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
+                log.onQueryPhase(ctx, 21L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
 
-            log.onFetchPhase(ctx, 20L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
-            log.onFetchPhase(ctx, 21L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
-        }
+                log.onFetchPhase(ctx, 20L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
+                log.onFetchPhase(ctx, 21L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.DEBUG));
+            }
 
-        {
-            log.onQueryPhase(ctx, 10L);
-            assertNull(appender.getLastEventAndReset());
-            log.onQueryPhase(ctx, 11L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
+            {
+                log.onQueryPhase(ctx, 10L);
+                assertNull(appender.getLastEventAndReset());
+                log.onQueryPhase(ctx, 11L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
 
-            log.onFetchPhase(ctx, 10L);
-            assertNull(appender.getLastEventAndReset());
-            log.onFetchPhase(ctx, 11L);
-            assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
+                log.onFetchPhase(ctx, 10L);
+                assertNull(appender.getLastEventAndReset());
+                log.onFetchPhase(ctx, 11L);
+                assertThat(appender.getLastEventAndReset().getLevel(), equalTo(Level.TRACE));
+            }
         }
     }
 
@@ -160,63 +163,71 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
     }
 
     public void testTwoLoggersDifferentLevel() {
-        SearchContext ctx1 = searchContextWithSourceAndTask(createIndex("index-1"));
-        SearchContext ctx2 = searchContextWithSourceAndTask(createIndex("index-2"));
-        IndexSettings settings1 = new IndexSettings(
-            createIndexMetadata(
-                "index-1",
-                Settings.builder()
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
-                    .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                    .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_WARN_SETTING.getKey(), "40nanos")
-                    .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_WARN_SETTING.getKey(), "40nanos")
-            ),
-            Settings.EMPTY
-        );
-        SearchSlowLog log1 = new SearchSlowLog(settings1);
+        try (
+            SearchContext ctx1 = searchContextWithSourceAndTask(createIndex("index-1"));
+            SearchContext ctx2 = searchContextWithSourceAndTask(createIndex("index-2"))
+        ) {
+            IndexSettings settings1 = new IndexSettings(
+                createIndexMetadata(
+                    "index-1",
+                    Settings.builder()
+                        .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                        .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+                        .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_WARN_SETTING.getKey(), "40nanos")
+                        .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_WARN_SETTING.getKey(), "40nanos")
+                ),
+                Settings.EMPTY
+            );
+            SearchSlowLog log1 = new SearchSlowLog(settings1, mock(SlowLogFieldProvider.class));
 
-        IndexSettings settings2 = new IndexSettings(
-            createIndexMetadata(
-                "index-2",
-                Settings.builder()
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
-                    .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                    .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_TRACE_SETTING.getKey(), "10nanos")
-                    .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_TRACE_SETTING.getKey(), "10nanos")
-            ),
-            Settings.EMPTY
-        );
-        SearchSlowLog log2 = new SearchSlowLog(settings2);
+            IndexSettings settings2 = new IndexSettings(
+                createIndexMetadata(
+                    "index-2",
+                    Settings.builder()
+                        .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                        .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+                        .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_TRACE_SETTING.getKey(), "10nanos")
+                        .put(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_TRACE_SETTING.getKey(), "10nanos")
+                ),
+                Settings.EMPTY
+            );
+            SearchSlowLog log2 = new SearchSlowLog(settings2, mock(SlowLogFieldProvider.class));
 
-        {
-            // threshold set on WARN only, should not log
-            log1.onQueryPhase(ctx1, 11L);
-            assertNull(appender.getLastEventAndReset());
-            log1.onFetchPhase(ctx1, 11L);
-            assertNull(appender.getLastEventAndReset());
+            {
+                // threshold set on WARN only, should not log
+                log1.onQueryPhase(ctx1, 11L);
+                assertNull(appender.getLastEventAndReset());
+                log1.onFetchPhase(ctx1, 11L);
+                assertNull(appender.getLastEventAndReset());
 
-            // threshold set on TRACE, should log
-            log2.onQueryPhase(ctx2, 11L);
-            assertNotNull(appender.getLastEventAndReset());
-            log2.onFetchPhase(ctx2, 11L);
-            assertNotNull(appender.getLastEventAndReset());
+                // threshold set on TRACE, should log
+                log2.onQueryPhase(ctx2, 11L);
+                assertNotNull(appender.getLastEventAndReset());
+                log2.onFetchPhase(ctx2, 11L);
+                assertNotNull(appender.getLastEventAndReset());
+            }
         }
     }
 
     public void testMultipleSlowLoggersUseSingleLog4jLogger() {
         LoggerContext context = (LoggerContext) LogManager.getContext(false);
 
-        SearchContext ctx1 = searchContextWithSourceAndTask(createIndex("index-1"));
-        IndexSettings settings1 = new IndexSettings(createIndexMetadata("index-1", settings(UUIDs.randomBase64UUID())), Settings.EMPTY);
-        SearchSlowLog log1 = new SearchSlowLog(settings1);
-        int numberOfLoggersBefore = context.getLoggers().size();
+        try (SearchContext ctx1 = searchContextWithSourceAndTask(createIndex("index-1"))) {
+            IndexSettings settings1 = new IndexSettings(createIndexMetadata("index-1", settings(UUIDs.randomBase64UUID())), Settings.EMPTY);
+            SearchSlowLog log1 = new SearchSlowLog(settings1, mock(SlowLogFieldProvider.class));
+            int numberOfLoggersBefore = context.getLoggers().size();
 
-        SearchContext ctx2 = searchContextWithSourceAndTask(createIndex("index-2"));
-        IndexSettings settings2 = new IndexSettings(createIndexMetadata("index-2", settings(UUIDs.randomBase64UUID())), Settings.EMPTY);
-        SearchSlowLog log2 = new SearchSlowLog(settings2);
+            try (SearchContext ctx2 = searchContextWithSourceAndTask(createIndex("index-2"))) {
+                IndexSettings settings2 = new IndexSettings(
+                    createIndexMetadata("index-2", settings(UUIDs.randomBase64UUID())),
+                    Settings.EMPTY
+                );
+                SearchSlowLog log2 = new SearchSlowLog(settings2, mock(SlowLogFieldProvider.class));
 
-        int numberOfLoggersAfter = context.getLoggers().size();
-        assertThat(numberOfLoggersAfter, equalTo(numberOfLoggersBefore));
+                int numberOfLoggersAfter = context.getLoggers().size();
+                assertThat(numberOfLoggersAfter, equalTo(numberOfLoggersBefore));
+            }
+        }
     }
 
     private IndexMetadata createIndexMetadata(String index, Settings.Builder put) {
@@ -225,49 +236,70 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
 
     public void testSlowLogHasJsonFields() throws IOException {
         IndexService index = createIndex("foo");
-        SearchContext searchContext = searchContextWithSourceAndTask(index);
-        ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(searchContext, 10);
+        try (SearchContext searchContext = searchContextWithSourceAndTask(index)) {
+            ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(Map.of(), searchContext, 10);
 
-        assertThat(p.get("elasticsearch.slowlog.message"), equalTo("[foo][0]"));
-        assertThat(p.get("elasticsearch.slowlog.took"), equalTo("10nanos"));
-        assertThat(p.get("elasticsearch.slowlog.took_millis"), equalTo("0"));
-        assertThat(p.get("elasticsearch.slowlog.total_hits"), equalTo("-1"));
-        assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[]"));
-        assertThat(p.get("elasticsearch.slowlog.search_type"), Matchers.nullValue());
-        assertThat(p.get("elasticsearch.slowlog.total_shards"), equalTo("1"));
-        assertThat(p.get("elasticsearch.slowlog.source"), equalTo("{\\\"query\\\":{\\\"match_all\\\":{\\\"boost\\\":1.0}}}"));
+            assertThat(p.get("elasticsearch.slowlog.message"), equalTo("[foo][0]"));
+            assertThat(p.get("elasticsearch.slowlog.took"), equalTo("10nanos"));
+            assertThat(p.get("elasticsearch.slowlog.took_millis"), equalTo("0"));
+            assertThat(p.get("elasticsearch.slowlog.total_hits"), equalTo("-1"));
+            assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[]"));
+            assertThat(p.get("elasticsearch.slowlog.search_type"), Matchers.nullValue());
+            assertThat(p.get("elasticsearch.slowlog.total_shards"), equalTo("1"));
+            assertThat(p.get("elasticsearch.slowlog.source"), equalTo("{\\\"query\\\":{\\\"match_all\\\":{\\\"boost\\\":1.0}}}"));
+        }
+    }
+
+    public void testSlowLogHasAdditionalFields() throws IOException {
+        IndexService index = createIndex("foo");
+        try (SearchContext searchContext = searchContextWithSourceAndTask(index)) {
+            ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(Map.of("field1", "value1", "field2", "value2"), searchContext, 10);
+            assertThat(p.get("field1"), equalTo("value1"));
+            assertThat(p.get("field2"), equalTo("value2"));
+            assertThat(p.get("elasticsearch.slowlog.message"), equalTo("[foo][0]"));
+            assertThat(p.get("elasticsearch.slowlog.took"), equalTo("10nanos"));
+            assertThat(p.get("elasticsearch.slowlog.took_millis"), equalTo("0"));
+            assertThat(p.get("elasticsearch.slowlog.total_hits"), equalTo("-1"));
+            assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[]"));
+            assertThat(p.get("elasticsearch.slowlog.search_type"), Matchers.nullValue());
+            assertThat(p.get("elasticsearch.slowlog.total_shards"), equalTo("1"));
+            assertThat(p.get("elasticsearch.slowlog.source"), equalTo("{\\\"query\\\":{\\\"match_all\\\":{\\\"boost\\\":1.0}}}"));
+        }
     }
 
     public void testSlowLogsWithStats() throws IOException {
         IndexService index = createIndex("foo");
-        SearchContext searchContext = createSearchContext(index, "group1");
-        SearchSourceBuilder source = SearchSourceBuilder.searchSource().query(QueryBuilders.matchAllQuery());
-        searchContext.request().source(source);
-        searchContext.setTask(
-            new SearchShardTask(0, "n/a", "n/a", "test", null, Collections.singletonMap(Task.X_OPAQUE_ID_HTTP_HEADER, "my_id"))
-        );
+        try (SearchContext searchContext = createSearchContext(index, "group1")) {
+            SearchSourceBuilder source = SearchSourceBuilder.searchSource().query(QueryBuilders.matchAllQuery());
+            searchContext.request().source(source);
+            searchContext.setTask(
+                new SearchShardTask(0, "n/a", "n/a", "test", null, Collections.singletonMap(Task.X_OPAQUE_ID_HTTP_HEADER, "my_id"))
+            );
 
-        ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(searchContext, 10);
-        assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[\\\"group1\\\"]"));
+            ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(Map.of(), searchContext, 10);
+            assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[\\\"group1\\\"]"));
+        }
 
-        searchContext = createSearchContext(index, "group1", "group2");
-        source = SearchSourceBuilder.searchSource().query(QueryBuilders.matchAllQuery());
-        searchContext.request().source(source);
-        searchContext.setTask(
-            new SearchShardTask(0, "n/a", "n/a", "test", null, Collections.singletonMap(Task.X_OPAQUE_ID_HTTP_HEADER, "my_id"))
-        );
-        p = SearchSlowLog.SearchSlowLogMessage.of(searchContext, 10);
-        assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[\\\"group1\\\", \\\"group2\\\"]"));
+        try (SearchContext searchContext = createSearchContext(index, "group1", "group2");) {
+            SearchSourceBuilder source = SearchSourceBuilder.searchSource().query(QueryBuilders.matchAllQuery());
+            searchContext.request().source(source);
+            searchContext.setTask(
+                new SearchShardTask(0, "n/a", "n/a", "test", null, Collections.singletonMap(Task.X_OPAQUE_ID_HTTP_HEADER, "my_id"))
+            );
+            ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(Map.of(), searchContext, 10);
+            assertThat(p.get("elasticsearch.slowlog.stats"), equalTo("[\\\"group1\\\", \\\"group2\\\"]"));
+        }
     }
 
     public void testSlowLogSearchContextPrinterToLog() throws IOException {
         IndexService index = createIndex("foo");
-        SearchContext searchContext = searchContextWithSourceAndTask(index);
-        ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(searchContext, 10);
-        assertThat(p.get("elasticsearch.slowlog.message"), equalTo("[foo][0]"));
-        // Makes sure that output doesn't contain any new lines
-        assertThat(p.get("elasticsearch.slowlog.source"), not(containsString("\n")));
-        assertThat(p.get("elasticsearch.slowlog.id"), equalTo("my_id"));
+        try (SearchContext searchContext = searchContextWithSourceAndTask(index)) {
+            ESLogMessage p = SearchSlowLog.SearchSlowLogMessage.of(Map.of(), searchContext, 10);
+            assertThat(p.get("elasticsearch.slowlog.message"), equalTo("[foo][0]"));
+            // Makes sure that output doesn't contain any new lines
+            assertThat(p.get("elasticsearch.slowlog.source"), not(containsString("\n")));
+            assertThat(p.get("elasticsearch.slowlog.id"), equalTo("my_id"));
+        }
     }
 
     public void testSetQueryLevels() {
@@ -282,7 +314,7 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
                 .build()
         );
         IndexSettings settings = new IndexSettings(metadata, Settings.EMPTY);
-        SearchSlowLog log = new SearchSlowLog(settings);
+        SearchSlowLog log = new SearchSlowLog(settings, mock(SlowLogFieldProvider.class));
         assertEquals(TimeValue.timeValueMillis(100).nanos(), log.getQueryTraceThreshold());
         assertEquals(TimeValue.timeValueMillis(200).nanos(), log.getQueryDebugThreshold());
         assertEquals(TimeValue.timeValueMillis(300).nanos(), log.getQueryInfoThreshold());
@@ -313,7 +345,7 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getQueryWarnThreshold());
 
         settings = new IndexSettings(metadata, Settings.EMPTY);
-        log = new SearchSlowLog(settings);
+        log = new SearchSlowLog(settings, mock(SlowLogFieldProvider.class));
 
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getQueryTraceThreshold());
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getQueryDebugThreshold());
@@ -388,7 +420,7 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
                 .build()
         );
         IndexSettings settings = new IndexSettings(metadata, Settings.EMPTY);
-        SearchSlowLog log = new SearchSlowLog(settings);
+        SearchSlowLog log = new SearchSlowLog(settings, mock(SlowLogFieldProvider.class));
         assertEquals(TimeValue.timeValueMillis(100).nanos(), log.getFetchTraceThreshold());
         assertEquals(TimeValue.timeValueMillis(200).nanos(), log.getFetchDebugThreshold());
         assertEquals(TimeValue.timeValueMillis(300).nanos(), log.getFetchInfoThreshold());
@@ -419,7 +451,7 @@ public class SearchSlowLogTests extends ESSingleNodeTestCase {
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getFetchWarnThreshold());
 
         settings = new IndexSettings(metadata, Settings.EMPTY);
-        log = new SearchSlowLog(settings);
+        log = new SearchSlowLog(settings, mock(SlowLogFieldProvider.class));
 
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getFetchTraceThreshold());
         assertEquals(TimeValue.timeValueMillis(-1).nanos(), log.getFetchDebugThreshold());
