@@ -7,6 +7,7 @@
 
 package org.elasticsearch.xpack.security.apikey;
 
+import org.apache.http.client.methods.HttpDelete;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.util.EntityUtils;
 import org.elasticsearch.client.Request;
@@ -20,23 +21,25 @@ import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.security.action.apikey.ApiKey;
 import org.elasticsearch.xpack.core.security.action.apikey.GetApiKeyResponse;
+import org.elasticsearch.xpack.core.security.action.apikey.InvalidateApiKeyResponse;
 import org.elasticsearch.xpack.core.security.authc.support.UsernamePasswordToken;
 import org.elasticsearch.xpack.security.SecurityOnTrialLicenseRestTestCase;
 import org.junit.Before;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 
 import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.emptyArray;
+import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.iterableWithSize;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.nullValue;
 
 public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
     private static final SecureString END_USER_PASSWORD = new SecureString("end-user-password".toCharArray());
@@ -99,7 +102,7 @@ public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
 
         // We get an empty result when no API keys active
         getSecurityClient().invalidateApiKeys(apiKeyId1);
-        assertThat(getApiKeysWithRequestParams(Map.of("active_only", "true")).getApiKeyInfos(), emptyArray());
+        assertThat(getApiKeysWithRequestParams(Map.of("active_only", "true")).getApiKeyInfoList(), emptyIterable());
 
         {
             // Using together with id parameter, returns 404 for inactive key
@@ -162,12 +165,12 @@ public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
             manageApiKeyUserApiKeyId
         );
         assertThat(
-            getApiKeysWithRequestParams(Map.of("active_only", "true", "username", MANAGE_OWN_API_KEY_USER)).getApiKeyInfos(),
-            emptyArray()
+            getApiKeysWithRequestParams(Map.of("active_only", "true", "username", MANAGE_OWN_API_KEY_USER)).getApiKeyInfoList(),
+            emptyIterable()
         );
         assertThat(
-            getApiKeysWithRequestParams(MANAGE_OWN_API_KEY_USER, Map.of("active_only", "true", "owner", "true")).getApiKeyInfos(),
-            emptyArray()
+            getApiKeysWithRequestParams(MANAGE_OWN_API_KEY_USER, Map.of("active_only", "true", "owner", "true")).getApiKeyInfoList(),
+            emptyIterable()
         );
 
         // No more active API keys
@@ -176,15 +179,15 @@ public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
         assertThat(
             getApiKeysWithRequestParams(
                 Map.of("active_only", "true", "username", randomFrom(MANAGE_SECURITY_USER, MANAGE_OWN_API_KEY_USER))
-            ).getApiKeyInfos(),
-            emptyArray()
+            ).getApiKeyInfoList(),
+            emptyIterable()
         );
         assertThat(
             getApiKeysWithRequestParams(
                 randomFrom(MANAGE_SECURITY_USER, MANAGE_OWN_API_KEY_USER),
                 Map.of("active_only", "true", "owner", "true")
-            ).getApiKeyInfos(),
-            emptyArray()
+            ).getApiKeyInfoList(),
+            emptyIterable()
         );
         // With flag set to false, we get both inactive keys
         assertResponseContainsApiKeyIds(
@@ -192,6 +195,41 @@ public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
             manageOwnApiKeyUserApiKeyId,
             manageApiKeyUserApiKeyId
         );
+    }
+
+    public void testInvalidateApiKey() throws Exception {
+        final String apiKeyId0 = createApiKey(MANAGE_SECURITY_USER, "key-2");
+
+        Request request = new Request(HttpGet.METHOD_NAME, "/_security/api_key/");
+        setUserForRequest(request, MANAGE_SECURITY_USER);
+        GetApiKeyResponse getApiKeyResponse = GetApiKeyResponse.fromXContent(getParser(client().performRequest(request)));
+
+        assertThat(getApiKeyResponse.getApiKeyInfoList(), iterableWithSize(1));
+        ApiKey apiKey = getApiKeyResponse.getApiKeyInfoList().get(0).apiKeyInfo();
+        assertThat(apiKey.isInvalidated(), equalTo(false));
+        assertThat(apiKey.getInvalidation(), nullValue());
+        assertThat(apiKey.getId(), equalTo(apiKeyId0));
+
+        request = new Request(HttpDelete.METHOD_NAME, "/_security/api_key/");
+        setUserForRequest(request, MANAGE_SECURITY_USER);
+        request.setJsonEntity(XContentTestUtils.convertToXContent(Map.of("ids", List.of(apiKeyId0)), XContentType.JSON).utf8ToString());
+
+        InvalidateApiKeyResponse invalidateApiKeyResponse = InvalidateApiKeyResponse.fromXContent(
+            getParser(client().performRequest(request))
+        );
+
+        assertThat(invalidateApiKeyResponse.getInvalidatedApiKeys().size(), equalTo(1));
+        assertThat(invalidateApiKeyResponse.getInvalidatedApiKeys().get(0), equalTo(apiKey.getId()));
+
+        request = new Request(HttpGet.METHOD_NAME, "/_security/api_key/");
+        setUserForRequest(request, MANAGE_SECURITY_USER);
+        getApiKeyResponse = GetApiKeyResponse.fromXContent(getParser(client().performRequest(request)));
+
+        assertThat(getApiKeyResponse.getApiKeyInfoList(), iterableWithSize(1));
+        apiKey = getApiKeyResponse.getApiKeyInfoList().get(0).apiKeyInfo();
+        assertThat(apiKey.isInvalidated(), equalTo(true));
+        assertThat(apiKey.getInvalidation(), notNullValue());
+        assertThat(apiKey.getId(), equalTo(apiKeyId0));
     }
 
     private GetApiKeyResponse getApiKeysWithRequestParams(Map<String, String> requestParams) throws IOException {
@@ -206,7 +244,10 @@ public class GetApiKeysRestIT extends SecurityOnTrialLicenseRestTestCase {
     }
 
     private static void assertResponseContainsApiKeyIds(GetApiKeyResponse response, String... ids) {
-        assertThat(Arrays.stream(response.getApiKeyInfos()).map(ApiKey::getId).collect(Collectors.toList()), containsInAnyOrder(ids));
+        assertThat(
+            response.getApiKeyInfoList().stream().map(GetApiKeyResponse.Item::apiKeyInfo).map(ApiKey::getId).toList(),
+            containsInAnyOrder(ids)
+        );
     }
 
     private static XContentParser getParser(Response response) throws IOException {
